cart on mobile issue

--- a/public/style.css
+++ b/public/style.css
@@ -3647,3 +3647,6 @@ li.phone-header {
         margin-top: 100px;
         text-align: center;
     }
+footer.footer {
+    clear: both;
+}
